--- a/NZWalks/NZWalks.Api/appsettings.json
+++ b/NZWalks/NZWalks.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "NZWalks": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NZWalks;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  }
 }
