--- a/NZWalks/NZWalks.Api/appsettings.json
+++ b/NZWalks/NZWalks.Api/appsettings.json
@@ -9,5 +9,11 @@
   "ConnectionStrings": {
 
     "NZWalks": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NZWalks;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+  "Jwt": {
+    "Key": "F_GsGG3VhtGxSd0_vR7gt6bFKPw-mgsk54f5fnDR8WZrgjl9cyHf94fzI8SmyHtkR7DeSwam372d3G_puuCnvg",
+    "Issuer": "https://localhost:7295/",
+    "Audience": "https://localhost:7295/"
+
   }
 }
